# rerun

chronicle/: .gitignore  Cargo.toml  HANDOFF.md  README.md  pyo3-build.cfg
chronicle/.cargo/: config.toml
chronicle/crates/chronicle_core/: Cargo.toml
chronicle/crates/chronicle_core/src/: error.rs  event.rs  ids.rs  lib.rs  media.rs  query.rs  time_range.rs
chronicle/crates/chronicle_embed/: Cargo.toml
chronicle/crates/chronicle_embed/src/: lib.rs  text_extractor.rs
chronicle/crates/chronicle_gorgias/: Cargo.toml
chronicle/crates/chronicle_gorgias/src/: lib.rs
chronicle/crates/chronicle_ingest/: Cargo.toml
chronicle/crates/chronicle_ingest/src/: batcher.rs  lib.rs  schema_detector.rs
chronicle/crates/chronicle_interner/: Cargo.toml
chronicle/crates/chronicle_interner/src/: lib.rs
chronicle/crates/chronicle_link/: Cargo.toml
chronicle/crates/chronicle_link/src/: extractor.rs  lib.rs
chronicle/crates/chronicle_py/: Cargo.toml
chronicle/crates/chronicle_py/python/chronicle/: __init__.py
chronicle/crates/chronicle_py/src/: lib.rs
chronicle/crates/chronicle_query/: Cargo.toml
chronicle/crates/chronicle_query/src/: lib.rs
chronicle/crates/chronicle_rerun_bridge/: Cargo.toml
chronicle/crates/chronicle_rerun_bridge/examples/: chronicle_viewer_demo.rs
chronicle/crates/chronicle_rerun_bridge/src/: formatting.rs  lib.rs
chronicle/crates/chronicle_sdk/: Cargo.toml
chronicle/crates/chronicle_sdk/src/: client.rs
chronicle/crates/chronicle_server/: Cargo.toml
chronicle/crates/chronicle_server/src/: state.rs
chronicle/crates/chronicle_server/src/rest/: discovery.rs  error.rs  ingest.rs  links.rs  mod.rs  queries.rs
chronicle/crates/chronicle_server/tests/: golden_principles.rs  rest_api.rs
chronicle/crates/chronicle_store/: Cargo.toml
chronicle/crates/chronicle_store/src/: arrow_export.rs  engine.rs  lib.rs  subscriptions.rs  traits.rs
chronicle/crates/chronicle_store/src/hybrid/: archiver.rs  embeddings.rs  entity_refs.rs  events.rs  links.rs  mod.rs  parquet_io.rs  schemas.rs
chronicle/crates/chronicle_store/src/kurrent/: embeddings.rs  entity_refs.rs  events.rs  links.rs  mod.rs  schemas.rs  subscriptions.rs
chronicle/crates/chronicle_store/src/memory/: embeddings.rs  entity_refs.rs  events.rs  links.rs  mod.rs  schemas.rs  state.rs  subscriptions.rs
chronicle/crates/chronicle_store/src/postgres/: embeddings.rs  entity_refs.rs  events.rs  links.rs  mod.rs  query_builder.rs  schemas.rs
chronicle/crates/chronicle_store/tests/: bench_read_performance.rs  benchmark_all_backends.rs  benchmark_batch_scaling.rs  cross_backend_stress.rs  hybrid_backend.rs  kurrent_backend.rs  memory_backend.rs  postgres_backend.rs  subscription_tests.rs  tenant_isolation.rs
chronicle/crates/chronicle_stripe/: Cargo.toml
chronicle/crates/chronicle_stripe/src/: lib.rs
chronicle/crates/chronicle_test_fixtures/: Cargo.toml
chronicle/crates/chronicle_test_fixtures/src/: dataset.rs  factories.rs  trait_tests.rs
chronicle/crates/chronicle_tuid/: Cargo.toml
chronicle/crates/chronicle_tuid/src/: lib.rs
chronicle/crates/chronicle_viewer_common/: Cargo.toml
chronicle/crates/chronicle_viewer_common/examples/: chronicle_detail_demo.rs
chronicle/crates/chronicle_viewer_common/src/: filter_state.rs  lib.rs  links_list.rs
chronicle/examples/: agent_subscription_demo.py  event_linking_demo.py  gorgias_connector_demo.py  stripe_connector_demo.py  subscription_validation.py
crates/store/re_log_types/src/path/: parse_path.rs
crates/store/re_sdk_types/definitions/rerun/: archetypes.fbs  components.fbs
crates/store/re_sdk_types/src/archetypes/: .gitattributes  chronicle_entity_ref.rs  chronicle_event.rs  chronicle_link.rs  mod.rs
crates/store/re_sdk_types/src/components/: .gitattributes  chronicle_confidence.rs  chronicle_entity_id.rs  chronicle_entity_type.rs  chronicle_event_type.rs  chronicle_link_type.rs  chronicle_payload.rs  chronicle_reasoning.rs  chronicle_source.rs  chronicle_source_event.rs  chronicle_target_event.rs  chronicle_topic.rs  mod.rs
crates/store/re_sdk_types/src/reflection/: mod.rs
crates/viewer/re_time_panel/src/: chronicle_filter.rs  lib.rs  link_overlay.rs  time_panel.rs
crates/viewer/re_viewer/src/: app_state.rs
docs/content/reference/types/: archetypes.md  components.md
docs/content/reference/types/archetypes/: .gitattributes  chronicle_entity_ref.md  chronicle_event.md  chronicle_link.md
docs/content/reference/types/components/: .gitattributes  chronicle_confidence.md  chronicle_entity_id.md  chronicle_entity_type.md  chronicle_event_type.md  chronicle_link_type.md  chronicle_payload.md  chronicle_reasoning.md  chronicle_source.md  chronicle_source_event.md  chronicle_target_event.md  chronicle_topic.md  color.md  text.md
docs/content/reference/types/datatypes/: float32.md  utf8.md
docs/content/reference/types/views/: text_log_view.md
rerun_cpp/src/rerun/: archetypes.hpp  components.hpp
rerun_cpp/src/rerun/archetypes/: .gitattributes  chronicle_entity_ref.cpp  chronicle_entity_ref.hpp  chronicle_event.cpp  chronicle_event.hpp  chronicle_link.cpp  chronicle_link.hpp  coordinate_frame.hpp  depth_image.hpp  encoded_depth_image.hpp  image.hpp  mcap_statistics.hpp  mesh3d.hpp  video_stream.hpp
rerun_cpp/src/rerun/components/: .gitattributes  chronicle_confidence.hpp  chronicle_entity_id.hpp  chronicle_entity_type.hpp  chronicle_event_type.hpp  chronicle_link_type.hpp  chronicle_payload.hpp  chronicle_reasoning.hpp  chronicle_source.hpp  chronicle_source_event.hpp  chronicle_target_event.hpp  chronicle_topic.hpp
rerun_py/rerun_sdk/rerun/archetypes/: .gitattributes  __init__.py  chronicle_entity_ref.py  chronicle_event.py  chronicle_link.py
rerun_py/rerun_sdk/rerun/components/: .gitattributes  __init__.py  chronicle_confidence.py  chronicle_entity_id.py  chronicle_entity_type.py  chronicle_event_type.py  chronicle_link_type.py  chronicle_payload.py  chronicle_reasoning.py  chronicle_source.py  chronicle_source_event.py  chronicle_target_event.py  chronicle_topic.py
(+15 files in other folders)
