[workspace]
resolver = "2"
members = [
    "crates/chronicle_tuid",
    "crates/chronicle_interner",
    "crates/chronicle_core",
    "crates/chronicle_store",
    "crates/chronicle_ingest",
    "crates/chronicle_query",
    "crates/chronicle_link",
    "crates/chronicle_embed",
    "crates/chronicle_server",
    "crates/chronicle_sdk",
    "crates/chronicle_py",
    "crates/chronicle_test_fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chronicle-labs/chronicle"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
nohash-hasher = "0.2"
insta = { version = "1", features = ["json"] }
proptest = "1"
