[package]
name = "chronicle_rerun_bridge"
description = "Bridge between Chronicle and Rerun viewer -- maps events to Rerun archetypes."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
chronicle_core = { path = "../chronicle_core" }
chronicle_store = { path = "../chronicle_store", features = ["arrow-export"] }

chrono.workspace = true
rerun.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chronicle_test_fixtures = { path = "../chronicle_test_fixtures" }
