[package]
name = "chronicle_store"
description = "Storage trait abstractions for Chronicle. Backends implement these traits."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
postgres = ["dep:sqlx"]
hybrid = ["dep:datafusion", "dep:object_store", "postgres"]
kurrent = ["dep:kurrentdb", "postgres"]

[dependencies]
chronicle_core = { path = "../chronicle_core" }

async-trait = "0.1"
chrono.workspace = true
datafusion = { workspace = true, optional = true }
futures = "0.3"
itoa = "1"
kurrentdb = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chronicle_test_fixtures = { path = "../chronicle_test_fixtures" }
sqlx = { workspace = true }
tempfile = "3"
