[package]
name = "chronicle_stripe"
description = "First-class Stripe connector for Chronicle. Converts Stripe webhook JSON to typed Chronicle events with automatic entity ref extraction."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
chronicle_core = { path = "../chronicle_core" }

chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
